fix: missing color variable fix and update field set css

--- a/data/www/css/style.css
+++ b/data/www/css/style.css
@@ -189,6 +189,22 @@ button.fpColorsButton {
     }
 }
 
+fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+fieldset > legend:not(:focus):not(:active) {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    width: 1px;
+    height: 1px;
+    white-space: nowrap; 
+}
+
 input, select {
     min-height: var(--def-button-height);
     border-radius: var(--def-border-radius);
@@ -275,6 +291,10 @@ tr:nth-child(even) {
     width: 100%;
 }
 
+.center {
+    text-align: center;
+}
+
 .padding {
     padding: var(--def-margin);
 }
@@ -320,4 +340,10 @@ tr:nth-child(even) {
     100% {
       transform: rotate(360deg);
     }
-} 
+}
+
+.mode-description {
+    padding-inline: var(--def-margin);
+    text-align: center;
+    margin-top: 0;
+}
